src/objects/PSButtonLauncherItem__c.object
<CustomObject>
    <fields>
        <fullName>City_Field_API_Name__c</fullName>
        <label>City Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation_Msg__c</fullName>
        <label>Confirmation Msg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Field_API_Name__c</fullName>
        <label>Contact Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Address_Field_API_Name__c</fullName>
        <label>Full Address Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Icon_URL__c</fullName>
        <label>Icon URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude_Field_API_Name__c</fullName>
        <label>Latitude Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude_Field_API_Name__c</fullName>
        <label>Longitude Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSButtonLauncherCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSButtonLauncherCategory</label>
        <referenceTo>PSButtonLauncherCategory__c</referenceTo>
        <relationshipLabel>PSButtonLauncherItem</relationshipLabel>
        <relationshipName>PSButtonLauncherItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSButtonLauncherSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSButtonLauncherSetting</label>
        <referenceTo>PSButtonLauncherSetting__c</referenceTo>
        <relationshipLabel>PSButtonLauncherItem</relationshipLabel>
        <relationshipName>PSButtonLauncherItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_Field_API_Name__c</fullName>
        <label>State Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Field_API_Name__c</fullName>
        <label>Street Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Create Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode_Field_API_Name__c</fullName>
        <label>Zipcode Field API Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <label>PSButtonLauncherItem</label>
    <nameField>
        <displayFormat>BLI-{00000}</displayFormat>
        <label>PSButtonLauncherItem ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSButtonLauncherItem</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>